--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,23 @@ dependencies:
   cupertino_icons: ^0.1.2
   dio: 2.1.16
 
+  device_info: ^0.4.0+1
+  package_info: ^0.4.0+3
+
+  # State
+  provider: ^3.1.0
+
+  # 本地json对象存储
+  localstorage: ^2.0.0
+  cookie_jar: ^1.0.0
+  shared_preferences: ^0.5.2+2
+
+
+  # UI
+  oktoast: ^2.1.7
+  pull_to_refresh: ^1.5.6
+  cached_network_image: ^1.1.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
